src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Business_Line__c</fullName>
        <description>R4.1 - New dependent picklist field created for &quot;Domain&quot;. 
Picklist containing ABB Business lines.</description>
        <inlineHelpText>Business lines are intended for global reporting on a lower granularity than Business Units. They are stable data elements defining a certain offering scope with a product, system and service responsibility within a certain Business Unit.</inlineHelpText>
        <label>Business Line</label>
        <picklist>
            <controllingField>ABB_Domain__c</controllingField>
            <picklistValues>
                <fullName>BL.101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.104</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.107</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.109</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.113</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.114</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.201</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.202</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.203</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.204</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.251</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.252</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.253</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.254</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.255</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.256</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.257</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.258</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.259</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.301</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL.302</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
	
    <fields>
        <fullName>Business_Unit_Long__c</fullName>
        <description>Contains the combination of BU / BU Name</description>
        <formula>IF(
 Product_Group__r.Technical_BU__c = &quot; - &quot;,
 &quot;NONE&quot;,
 Product_Group__r.Technical_BU__c
)</formula>
        <label>Business Unit Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Product_Group__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQP_Quotation_Number__c</fullName>
        <description>Quotation Number provided back from CQP</description>
        <externalId>true</externalId>
        <inlineHelpText>DM Division specific read-only field. Gives the number of the corresponding quotation in CQP (Common Quotation Platform).</inlineHelpText>
        <label>CQP Quotation Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CQP_Quotation_Status__c</fullName>
        <description>Status from CQP quotation tool (only for DM division users &amp; opportunitites)</description>
        <inlineHelpText>DM Division specific read-only field. Gives the status of the corresponding quotation in CQP (Common Quotation Platform).</inlineHelpText>
        <label>CQP Quotation Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Indicator_Status__c</fullName>
        <formula>IF(OR(End_User_Project__c = NULL,Technical_Amount_USD__c &lt;= 5000000,Target__c = FALSE), &quot;No CT Required&quot;,  IF(AND( Technical_Amount_USD__c &gt; 5000000, Technical_Amount_USD__c &lt;=15000000, Target__c = TRUE , End_User_Project__r.Capture_Team_Count__c &gt; 0), &quot;CT Lite Available&quot;, IF(AND( Technical_Amount_USD__c &gt; 5000000, Technical_Amount_USD__c &lt;=15000000, Target__c = TRUE ,  End_User_Project__r.Capture_Team_Count__c = 0), &quot;CT Lite Required&quot;, IF(AND( Technical_Amount_USD__c &gt; 15000000, Target__c = TRUE ,  End_User_Project__r.Capture_Team_Count__c &gt; 0), &quot;CT Full Available&quot; ,IF(AND( Technical_Amount_USD__c &gt; 15000000, Target__c = TRUE ,  End_User_Project__r.Capture_Team_Count__c = 0), &quot;CT Full Required&quot; ,&apos;&apos;)))  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture Team Indicator Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Team_Indicator__c</fullName>
        <formula>IF(Or(End_User_Project__c = NULL,Technical_Amount_USD__c &lt;= 5000000, Target__c = FALSE), IMAGE(&quot;/resource/CaptureTeamNotRequired&quot;,&quot;&quot;,25,75),  IF(AND( Technical_Amount_USD__c &gt; 5000000, Technical_Amount_USD__c &lt;=15000000, Target__c = TRUE , End_User_Project__r.Capture_Team_Count__c &gt; 0), IMAGE(&quot;/resource/CaptureTeam5MCreated&quot;,&quot;&quot;,25,75), IF(AND( Technical_Amount_USD__c &gt; 5000000, Technical_Amount_USD__c &lt;=15000000, Target__c = TRUE ,  End_User_Project__r.Capture_Team_Count__c = 0), IMAGE(&quot;/resource/CaptureTeam5MOpen&quot;,&quot;&quot;,25,75), IF(AND( Technical_Amount_USD__c &gt; 15000000, Target__c = TRUE ,  End_User_Project__r.Capture_Team_Count__c &gt; 0), IMAGE(&quot;/resource/CaptureTeam15MCreated&quot;,&quot;&quot;,25,75),IF(AND( Technical_Amount_USD__c &gt; 15000000, Target__c = TRUE ,  End_User_Project__r.Capture_Team_Count__c = 0), IMAGE(&quot;/resource/CaptureTeam15MOpen&quot;,&quot;&quot;,25,75),&apos;&apos;)))  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capture Team Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capture_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of R5-2507. To associate the opportunity directly to the Capture Team.</description>
        <label>Capture Team</label>
        <referenceTo>Capture_Team__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <description>Picklist containing the values for differing ABB Channel Class.</description>
        <label>Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Sales to End Customer / End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Distributor / Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering, Procurement and Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal ABB Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Original Equipment Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Builder and Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APBLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commit_Set_Timestamp__c</fullName>
        <description>When the Commit checkbox is set the timestamp will be updated in this field</description>
        <label>Commit Set Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commit_Set_User__c</fullName>
        <description>When the Commit checkbox is set the username will be stored in this field</description>
        <label>Commit Set User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine whether a Commit value has been set.</description>
        <label>Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confidence_Level_Percent__c</fullName>
        <description>Translates the picklist &quot;Confidence Level&quot; to % for reporting</description>
        <formula>CASE(
 TEXT( Confidence_Level__c ), 
 &quot;Slight Delay&quot;, 0.75, 
 &quot;Substantial Delay Expected&quot;, 0.5,
 1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Confidence Level Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Confidence_Level__c</fullName>
        <description>Sets the level of confidence that Expected Award Date is still achievable</description>
        <inlineHelpText>Sets the level of confidence that Expected Award Date is still achievable</inlineHelpText>
        <label>Confidence Level</label>
        <picklist>
            <picklistValues>
                <fullName>No Delay Expected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Slight Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substantial Delay Expected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consortium_External__c</fullName>
        <label>Consortium External</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consortium_Leader__c</fullName>
        <label>Consortium Leader</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consortium__c</fullName>
        <inlineHelpText>If a consortium exist, select if it is INTERNAL or EXTERNAL. Please also add consortium member(s)/leader in the Partners section. Select &quot;consortium leader&quot; role for the leading company (if not ABB bidding unit) and &quot;consortium member&quot; for the partner(s).</inlineHelpText>
        <label>Consortium</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Creator_Email__c</fullName>
        <description>Integration Workstream : R5 : This is the creator of opportunity in ServIS system.</description>
        <label>ServIS Opportunity Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Created_from_Lead__c</fullName>
        <formula>NOT(ISBLANK(Lead_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created from Lead*</label>
        <type>Checkbox</type>
    </fields>
   
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>AND (CloseDate &lt; TODAY(),  IsClosed = false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Manager_Name__c</fullName>
        <description>created as part of R5</description>
        <label>Customer Account Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Buying_Path__c</fullName>
        <description>Stages of the Customer Buying Path according definition</description>
        <inlineHelpText>Please select the Customer Buying Path.
Note: ABB Sales Process (Stage) should not be ahead of the Customer Buying Path</inlineHelpText>
        <label>Customer Buying Path</label>
        <picklist>
            <picklistValues>
                <fullName>Awareness</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Explore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buying</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_City__c</fullName>
        <description>created as part of R5</description>
        <label>Customer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Country__c</fullName>
        <description>created as part of R5</description>
        <label>Customer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_No__c</fullName>
        <description>created as part of R5</description>
        <label>Customer Reference No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>Date when the delivery is due by.</description>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division_Risk_Review_Rules__c</fullName>
        <description>R4 - This field refers to Division Risk Review Rules.</description>
        <formula>CASE(Division__c,

&apos;PP&apos;,HYPERLINK(&quot;http://www300.abb.com/global/gad/gad00636.nsf/0/9ba687c4aa7e635dc1257a320069736f/$file/pp+division+instruction_revised+120628.pdf&quot;,&quot;Are you aware of your division´s risk review rules?&quot;), 

&apos;PS&apos;,HYPERLINK(&quot;http://www300.abb.com/global/gad/gad00072.nsf/bf177942f19f4a98c1257148003b7a0a/74aa51c7fa0ef937c125739f0056c551/$FILE/1.+3VAA100103+-+PS+Division+Instruction+Risk+Review+-+July+2014.pdf&quot;,&quot;Are you aware of your division´s risk review rules?&quot;), 

&apos;DM&apos;,HYPERLINK(&quot;http://www300.abb.com/global/gad/gad00481.nsf/0/50e00464d2ee0a7cc1257a6b002b0c0f/$file/DM_Risk_Review_Instruction_rev3_1_2012_Final.pdf&quot;,&quot;Are you aware of your division´s risk review rules?&quot;), 

&apos;LP&apos;,HYPERLINK(&quot;http://gad01-50.de.abb.com/GLOBAL/GAD/GAD00636.NSF/bf177942f19f4a98c1257148003b7a0a/d924197fb0a3eea6c1257d17002dccbe/$FILE/20141217_LP_Division_RR_instruction_ext.pdf&quot;,&quot;Are you aware of your division´s risk review rules?&quot;), 

HYPERLINK(&quot;http://www300.abb.com/global/gad/gad00636.nsf/0/9d02e1f134ed7006c12579830048cdbb/$file/pa+risk+review+instruction+3bpa000344+%E2%80%93+008pa+2013.pdf&quot;,&quot;Are you aware of your division´s risk review rules?&quot;))</formula>
        <label>Division Risk Review Rules</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Product_Group__r.Division__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of R5</description>
        <label>End User Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_City__c</fullName>
        <description>created as part of R5</description>
        <label>End User City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <description>created as part of R5</description>
        <label>End User Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_GUID__c</fullName>
        <description>TMP: Utility field to make the GUI available in custom buttons (does not allow referencing this field via fomula)</description>
        <formula>Account_End_User__r.GUID__c</formula>
        <label>End User GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_LSO_Reference_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3V1 - Lookup to LSO Reference Data</description>
        <label>End User LSO Reference Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ERP_Reference_Data__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_End_User__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ERP_Reference_Data__c</referenceTo>
        <relationshipLabel>Opportunities (End User LSO Reference Data)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Name__c</fullName>
        <description>TMP: Utility field to be used in Risk Review button because the project name is not accessible</description>
        <formula>End_User_Project__r.Name</formula>
        <label>End User Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Project_Site_Country__c</fullName>
        <description>Picklist containing the End User Project Site values</description>
        <inlineHelpText>Select the End User country for filtering the available End User Projects in the lookup below</inlineHelpText>
        <label>End User Project Site Country</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup to active End User Projects only</description>
        <inlineHelpText>Please select a End User Project (mandatory for Regular Opportunities, optional for Fast Track Opportunities).
Make sure that you set the Project Site Country first as this will be a filter for the End User Projects.</inlineHelpText>
        <label>End User Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>End_User_Project__c.End_User_Project_Status__c</field>
                <operation>notEqual</operation>
                <value>Closed, Cancelled</value>
            </filterItems>
            <filterItems>
                <field>$Source.Account_End_User__c</field>
                <operation>equals</operation>
                <valueField>End_User_Project__c.Account_End_User__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.End_User_Project_Site_Country__c</field>
                <operation>equals</operation>
                <valueField>End_User_Project__c.End_User_Project_Site_Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>End_User_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_date_difference__c</fullName>
        <formula>IF(CloseDate &lt; Today(),(CloseDate - Today())*-1,CloseDate - Today())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected date difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G1_Business_Value_Bankabil__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Opportunity is based on concrete needs</description>
        <inlineHelpText>Will | End user | Opportunity is based on concrete needs?

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Will: Business Value and Bankability</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Customer_Relationship__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Customer Relation, Good relationship with the customer</description>
        <inlineHelpText>Good relationship with the customer?

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Get: Customer Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_End_User__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; End user well established and capable to develop the opportunity</description>
        <inlineHelpText>Will | End user | End User well established and capable to develop the opportunity?

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Will: End User</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Fit_RR__c</fullName>
        <description>Gate 1: Fit - Trigger RR</description>
        <inlineHelpText>Trigger risk expected according to risk review

Yes: Statement is true 
No: Statement is false</inlineHelpText>
        <label>Fit: Trigger Risk Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Fit_Score__c</fullName>
        <description>Calculates individual scores of G1 Answers 
[Value Answer / Individual Score] * [Individual weights] * [Group weights]</description>
        <formula>IF ( TEXT(G1_Obvious_Risks__c) = &quot;Yes&quot;, &quot;0&quot;,

 TEXT( (
  CASE( G1_Strategy_PG__c , 
    &quot;SA&quot;, 100, 
    &quot;A&quot;, 75,
    &quot;N&quot;, 50,
    &quot;D&quot;, 25,
    0
  ) * 0.7

  +

  CASE( G1_Strategy_LSU__c , 
    &quot;SA&quot;, 100, 
    &quot;A&quot;, 75,
    &quot;N&quot;, 50,
    &quot;D&quot;, 25,
    0
  ) * 0.3
 ) * 0.5

 +

 CASE( G1_Ressources__c , 
   &quot;Yes&quot;, 100,
   0
 ) * 1 * 0.3

 + 

 (
  CASE( G1_Fit_RR__c , 
    &quot;No&quot;, 100, 
    0
  ) * 0.2

  +

  CASE( G1_Obvious_Risks__c , 
    &quot;No&quot;, 100, 
    0
  ) * 0.8
 ) * 0.2
))

&amp; 

IF( 
 OR( 
  TEXT(G1_Fit_RR__c) = &quot;Yes&quot;,
  TEXT(G1_Obvious_Risks__c) = &quot;Yes&quot;
 ),
 &quot; &quot; &amp; IMAGE (&quot;/img/samples/flag_red.gif&quot;, &quot;Status Red&quot;),
 &quot;&quot;
)</formula>
        <label>Fit: Total Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>G1_Fulfill_Requirements__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Competition, ABB can provide a differentiated technical solution that fulfills the requirements</description>
        <inlineHelpText>Competition: ABB can provide a differentiated technical solution that fulfills the requirements

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Get: Solution Fulfills Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>G1_Known_Customer__c</fullName>
        <description>Gate 1: Sales Pursuit --&gt; Customer Relation, Customer known to ABB</description>
        <inlineHelpText>Customer Relation, Customer known to ABB

Please rate each criteria according to the following scale: SA-strongly agree, A-Agree, N-Neutral, D-Disagree, SD- Strongly Disagree</inlineHelpText>
        <label>Get: Known Customer</label>
        <picklist>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>